--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>My first git repo</title>
 </head>
 <body>
-    
+    <h1>
+        i can push code in github now
+    </h1>
+    <h2>mama i can code now</h2>
+    <h3>
+        new code change now
+    </h3>
 </body>
 </html>
