--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         new code change now
     </h3>
     <p>i nam codd fjsfljs da;e;wp kf joame2e9 m if0wia f.ae'</p>
+    <img src="maraj.jpg.jpg" alt="maraj">
 </body>
 </html>
